--- a/proje/personality_test/style.css
+++ b/proje/personality_test/style.css
@@ -88,15 +88,21 @@ body {
 }
 
 .start_btn button {
+    background-color: #F08080;
     font-size: 25px;
     font-weight: 500;
-    color: #CD5C5C;
+    color: #fff;
     padding: 15px 30px;
     outline: none;
     border: none;
     border-radius: 5px;
-    background: #fff;
     cursor: pointer;
+}
+
+.start_btn button:hover {
+    background-color: #cce5ff;
+    color: #F08080;
+    transition: 250ms all;
 }
 
 .info_box {
@@ -349,7 +355,7 @@ footer button {
 }
 
 footer button:hover {
-    background: #CD5C5C;
+    background: #F08080;
 }
 
 footer button.show {
@@ -421,7 +427,7 @@ footer button.show {
 }
 
 .buttons button.restart:hover {
-    background: #0263ca;
+    background: #F08080;
 }
 
 .buttons button.quit {
@@ -431,7 +437,7 @@ footer button.show {
 
 .buttons button.quit:hover {
     color: #fff;
-    background: #007bff;
+    background: #F08080;
 }
 
 .center {
@@ -450,11 +456,11 @@ footer button.show {
 .user_info {
     background: rgb(91 84 255);
     padding: 50px;
-    border-left: 5px solid rgb(0 25 50);
+    border-left: 5px solid #2196F3;
 }
 
 .user_info input {
-    background: rgb(207 207 207);
+    background: rgb(255, 255, 255);
     border: 1px solid rgb(0 0 0 / 0%);
     border-radius: 2px;
     line-height: 30px;
@@ -487,14 +493,15 @@ footer button.show {
     font-size: 1rem;
     margin-top: 15px;
     flex: 1;
-    border: 1px solid #007bff;
+    border: 1px solid transparent;
     cursor: pointer;
     transition: 100ms all;
 }
 
 .user_info .info_buttons button:hover {
-    background-color: #007bff;
+    background-color: #F08080;
     color: #fff;
+    border: 1px solid #CD5C5C;
 }
 
 .user_info .info_buttons button:last-child {
@@ -506,13 +513,21 @@ footer button.show {
 }
 
 .pre-registration button {
-    padding: 10px;
+    background-color: #F08080;
+    border-radius: 15px;
+    border: none;
+    padding: 20px 30px;
     margin-right: 10px;
     cursor: pointer;
-    font-size: 1rem;
+    color: #fff;
+    font-size: 1.4rem;
+    font-family: sans-serif;
+    transition: 100ms all;
 }
 
 .pre-registration button:hover {
-    background-color: #007bff;
-    border: 2px solid #004085;
+    background-color: #CD5C5C;
+    box-shadow: 0px 0px 10px 0px #F08080;
+    color: rgb(236, 229, 229);
+    border: 1px solid #F08080;
 }
